# CODSRC5005

CoD4x_Client-master/: README.txt  compile_single.cmd  compiledll-betarelease.cmd  compiledll-development.cmd  compiledll-development_linkonly.cmd  compiledll-release.cmd  compiledll_common.cmd  obfus.cmd  release_run.cmd
CoD4x_Client-master/CoD4x_ClientLoaderStub/: CMakeLists.txt  compiledll-debug.cmd  compiledll-release.cmd
CoD4x_Client-master/CoD4x_ClientLoaderStub/src/: callbacks.asm  cmd.c  cmd.h  q_shared.h  qcommon_parsecmdline.c  qshared.c  sec_common.h  sec_crypto.c  sec_init.c  sec_sign.c  sys_patch.c  sys_patch.h  win_main.c  win_sys.h
CoD4x_Client-master/cmds/: README.txt  debug_mingw_build.cmd  debug_mingw_clean.cmd  debug_mingw_configure.cmd  debug_mingw_rebuild.cmd  debug_mingw_relink.cmd  release_mingw_build.cmd  release_mingw_clean.cmd  release_mingw_configure.cmd  release_mingw_rebuild.cmd  release_mingw_relink.cmd
CoD4x_Client-master/cod4_guard/guard_cncserver/: adler32.c  compiletext-exe.cmd  iw3mp.image  main.c  pehlp.c
CoD4x_Client-master/cod4_guard/guard_svr/: build_win32_PE.cmd  todo.txt
CoD4x_Client-master/cod4_guard/sys_dumper/: CMakeLists.txt  cleanup_lib.c  compiledll-release.cmd  main.c  rc5_32.c  rc5_32.h
CoD4x_Client-master/cod4_guard/sys_dumper/blake/: blake2s-ref.c
CoD4x_Client-master/debug-datafiles/18.0/: cod4x_018.map
CoD4x_Client-master/debug-datafiles/18.2/: cod4x_018.map
CoD4x_Client-master/debug-datafiles/18.3/: cod4x_018.map
CoD4x_Client-master/src/: cg_main.c  cl_main.c  common.c  developer_utils.c  files.c  hackbypass.c  hackbypass.inc  msg.c  net_reliabletransport.c  q_shared.h  returnaddrcheck.h  sal.h  sys_anticheatloader.c  sys_patch.c  win_main.c
CoD4x_Client-master/src/diskinfo/: CMakeLists.txt  blake2.h  blake2s-ref.c  compiledll-jpg-debug.cmd  compiledll-jpg.cmd  compiledll-release.cmd  compiledll_debug.cmd  compressor.cpp  diskinfo.h  exeobfus.h  jpge.h  system_patch.c
CoD4x_Client-master/src/libseh-0.0.4/: CMakeLists.txt  GNUmakefile  Makefile
CoD4x_Client-master/src/libseh-0.0.4/tests/: Makefile
(+224 files in other folders)
